--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <% if ( 'cold' === process.env.REACT_APP_TYPE ) { %>
     <title>The Coldest Zarate</title>
+    <% } else { %>
+    <title>The Hottest Zarate</title>
+    <% } %>
   </head>
-  <body>
+  <body class="<%= 'cold' === process.env.REACT_APP_TYPE ? 'cold' : 'hot' %>">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
